lab-10/Syntax/Normal/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Syntax/Normal/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListExpr -> ListExpr                       (1)
	%start_pExpr -> Expr                               (2)
	%start_pMatchCase -> MatchCase                     (3)
	%start_pListMatchCase -> ListMatchCase             (4)
	%start_pBinding -> Binding                         (5)
	%start_pListBinding -> ListBinding                 (6)
	%start_pExpr1 -> Expr1                             (7)
	%start_pExpr2 -> Expr2                             (8)
	%start_pExpr3 -> Expr3                             (9)
	%start_pType -> Type                               (10)
	%start_pType1 -> Type1                             (11)
	%start_pType2 -> Type2                             (12)
	%start_pFieldType -> FieldType                     (13)
	%start_pListFieldType -> ListFieldType             (14)
	%start_pTyping -> Typing                           (15)
	Ident -> L_Ident                                   (16)
	Program -> ListExpr                                (17)
	ListExpr ->                                        (18)
	ListExpr -> Expr                                   (19)
	ListExpr -> Expr ';' ListExpr                      (20)
	Expr -> 'if' Expr 'then' Expr 'else' Expr          (21)
	Expr -> 'let' Ident '=' Expr 'in' Expr             (22)
	Expr -> 'fun' '(' Ident ':' Type ')' '{' 'return' Expr '}'   (23)
	Expr -> '{' ListBinding '}'                        (24)
	Expr -> '<' Ident '=' Expr '>' 'as' '<' ListFieldType '>'   (25)
	Expr -> 'match' Expr1 '{' ListMatchCase '}'        (26)
	Expr -> '[' ListExpr ']' 'as' '[' Type ']'         (27)
	Expr -> Expr1                                      (28)
	MatchCase -> '<' Ident '=' Ident '>' '=>' Expr     (29)
	ListMatchCase ->                                   (30)
	ListMatchCase -> MatchCase                         (31)
	ListMatchCase -> MatchCase ';' ListMatchCase       (32)
	Binding -> Ident '=' Expr                          (33)
	ListBinding ->                                     (34)
	ListBinding -> Binding                             (35)
	ListBinding -> Binding ',' ListBinding             (36)
	Expr1 -> Expr1 Expr2                               (37)
	Expr1 -> Expr2                                     (38)
	Expr2 -> 'cons' Expr3 Expr3                        (39)
	Expr2 -> 'head' Expr3                              (40)
	Expr2 -> 'isempty' Expr3                           (41)
	Expr2 -> 'tail' Expr3                              (42)
	Expr2 -> 'succ' Expr3                              (43)
	Expr2 -> 'pred' Expr3                              (44)
	Expr2 -> 'iszero' Expr3                            (45)
	Expr2 -> 'fix' Expr3                               (46)
	Expr2 -> 'fold' '[' Type ']' Expr3                 (47)
	Expr2 -> 'unfold' '[' Type ']' Expr3               (48)
	Expr2 -> Expr3                                     (49)
	Expr3 -> Expr3 '.' Ident                           (50)
	Expr3 -> 'true'                                    (51)
	Expr3 -> 'false'                                   (52)
	Expr3 -> '0'                                       (53)
	Expr3 -> Ident                                     (54)
	Expr3 -> '(' Expr ')'                              (55)
	Type -> Type1 '->' Type                            (56)
	Type -> 'µ' Ident '.' Type                         (57)
	Type -> Type1                                      (58)
	Type1 -> '{' ListFieldType '}'                     (59)
	Type1 -> '<' ListFieldType '>'                     (60)
	Type1 -> '[' Type ']'                              (61)
	Type1 -> Type2                                     (62)
	Type2 -> 'Bool'                                    (63)
	Type2 -> 'Nat'                                     (64)
	Type2 -> Ident                                     (65)
	Type2 -> '(' Type ')'                              (66)
	FieldType -> Ident ':' Type                        (67)
	ListFieldType ->                                   (68)
	ListFieldType -> FieldType                         (69)
	ListFieldType -> FieldType ',' ListFieldType       (70)
	Typing -> Expr ':' Type                            (71)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	','            { PT _ (TS _ 3) }
	'->'           { PT _ (TS _ 4) }
	'.'            { PT _ (TS _ 5) }
	'0'            { PT _ (TS _ 6) }
	':'            { PT _ (TS _ 7) }
	';'            { PT _ (TS _ 8) }
	'<'            { PT _ (TS _ 9) }
	'='            { PT _ (TS _ 10) }
	'=>'           { PT _ (TS _ 11) }
	'>'            { PT _ (TS _ 12) }
	'Bool'         { PT _ (TS _ 13) }
	'Nat'          { PT _ (TS _ 14) }
	'['            { PT _ (TS _ 15) }
	']'            { PT _ (TS _ 16) }
	'as'           { PT _ (TS _ 17) }
	'cons'         { PT _ (TS _ 18) }
	'else'         { PT _ (TS _ 19) }
	'false'        { PT _ (TS _ 20) }
	'fix'          { PT _ (TS _ 21) }
	'fold'         { PT _ (TS _ 22) }
	'fun'          { PT _ (TS _ 23) }
	'head'         { PT _ (TS _ 24) }
	'if'           { PT _ (TS _ 25) }
	'in'           { PT _ (TS _ 26) }
	'isempty'      { PT _ (TS _ 27) }
	'iszero'       { PT _ (TS _ 28) }
	'let'          { PT _ (TS _ 29) }
	'match'        { PT _ (TS _ 30) }
	'pred'         { PT _ (TS _ 31) }
	'return'       { PT _ (TS _ 32) }
	'succ'         { PT _ (TS _ 33) }
	'tail'         { PT _ (TS _ 34) }
	'then'         { PT _ (TS _ 35) }
	'true'         { PT _ (TS _ 36) }
	'unfold'       { PT _ (TS _ 37) }
	'{'            { PT _ (TS _ 38) }
	'}'            { PT _ (TS _ 39) }
	'µ'            { PT _ (TS _ 40) }
	L_Ident        { PT _ (TV $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListExpr rule  1
	%start_pExpr    rule  2
	%start_pMatchCase rule  3
	%start_pListMatchCase rule  4
	%start_pBinding rule  5
	%start_pListBinding rule  6
	%start_pExpr1   rule  7
	%start_pExpr2   rule  8
	%start_pExpr3   rule  9
	%start_pType    rule  10
	%start_pType1   rule  11
	%start_pType2   rule  12
	%start_pFieldType rule  13
	%start_pListFieldType rule  14
	%start_pTyping  rule  15
	Ident           rule  16
	Program         rule  17
	ListExpr        rules 18, 19, 20
	Expr            rules 21, 22, 23, 24, 25, 26, 27, 28
	MatchCase       rule  29
	ListMatchCase   rules 30, 31, 32
	Binding         rule  33
	ListBinding     rules 34, 35, 36
	Expr1           rules 37, 38
	Expr2           rules 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49
	Expr3           rules 50, 51, 52, 53, 54, 55
	Type            rules 56, 57, 58
	Type1           rules 59, 60, 61, 62
	Type2           rules 63, 64, 65, 66
	FieldType       rule  67
	ListFieldType   rules 68, 69, 70
	Typing          rule  71

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'('            shift, and enter state 24
	'0'            shift, and enter state 25
	'<'            shift, and enter state 26
	'['            shift, and enter state 27
	'cons'         shift, and enter state 28
	'false'        shift, and enter state 29
	'fix'          shift, and enter state 30
	'fold'         shift, and enter state 31
	'fun'          shift, and enter state 32
	'head'         shift, and enter state 33
	'if'           shift, and enter state 34
	'isempty'      shift, and enter state 35
	'iszero'       shift, and enter state 36
	'let'          shift, and enter state 37
	'match'        shift, and enter state 38
	'pred'         shift, and enter state 39
	'succ'         shift, and enter state 40
	'tail'         shift, and enter state 41
	'true'         shift, and enter state 42
	'unfold'       shift, and enter state 43
	'{'            shift, and enter state 44
	L_Ident        shift, and enter state 17
	%eof           reduce using rule 18

	Ident          goto state 18
	Program        goto state 76
	ListExpr       goto state 77
	Expr           goto state 75
	Expr1          goto state 20
	Expr2          goto state 21
	Expr3          goto state 22

State 1

	%start_pListExpr -> . ListExpr                      (rule 1)

	'('            shift, and enter state 24
	'0'            shift, and enter state 25
	'<'            shift, and enter state 26
	'['            shift, and enter state 27
	'cons'         shift, and enter state 28
	'false'        shift, and enter state 29
	'fix'          shift, and enter state 30
	'fold'         shift, and enter state 31
	'fun'          shift, and enter state 32
	'head'         shift, and enter state 33
	'if'           shift, and enter state 34
	'isempty'      shift, and enter state 35
	'iszero'       shift, and enter state 36
	'let'          shift, and enter state 37
	'match'        shift, and enter state 38
	'pred'         shift, and enter state 39
	'succ'         shift, and enter state 40
	'tail'         shift, and enter state 41
	'true'         shift, and enter state 42
	'unfold'       shift, and enter state 43
	'{'            shift, and enter state 44
	L_Ident        shift, and enter state 17
	%eof           reduce using rule 18

	Ident          goto state 18
	ListExpr       goto state 74
	Expr           goto state 75
	Expr1          goto state 20
	Expr2          goto state 21
	Expr3          goto state 22

State 2

	%start_pExpr -> . Expr                              (rule 2)

	'('            shift, and enter state 24
	'0'            shift, and enter state 25
	'<'            shift, and enter state 26
	'['            shift, and enter state 27
	'cons'         shift, and enter state 28
	'false'        shift, and enter state 29
	'fix'          shift, and enter state 30
	'fold'         shift, and enter state 31
	'fun'          shift, and enter state 32
	'head'         shift, and enter state 33
	'if'           shift, and enter state 34
	'isempty'      shift, and enter state 35
	'iszero'       shift, and enter state 36
	'let'          shift, and enter state 37
	'match'        shift, and enter state 38
	'pred'         shift, and enter state 39
	'succ'         shift, and enter state 40
	'tail'         shift, and enter state 41
	'true'         shift, and enter state 42
	'unfold'       shift, and enter state 43
	'{'            shift, and enter state 44
	L_Ident        shift, and enter state 17

	Ident          goto state 18
	Expr           goto state 73
	Expr1          goto state 20
	Expr2          goto state 21
	Expr3          goto state 22

State 3

	%start_pMatchCase -> . MatchCase                    (rule 3)

	'<'            shift, and enter state 71

	MatchCase      goto state 72

State 4

	%start_pListMatchCase -> . ListMatchCase            (rule 4)

	'<'            shift, and enter state 71
	%eof           reduce using rule 30

	MatchCase      goto state 69
	ListMatchCase  goto state 70

State 5

	%start_pBinding -> . Binding                        (rule 5)

	L_Ident        shift, and enter state 17

	Ident          goto state 65
	Binding        goto state 68

State 6

	%start_pListBinding -> . ListBinding                (rule 6)

	L_Ident        shift, and enter state 17
	%eof           reduce using rule 34

	Ident          goto state 65
	Binding        goto state 66
	ListBinding    goto state 67

State 7

	%start_pExpr1 -> . Expr1                            (rule 7)

	'('            shift, and enter state 24
	'0'            shift, and enter state 25
	'cons'         shift, and enter state 28
	'false'        shift, and enter state 29
	'fix'          shift, and enter state 30
	'fold'         shift, and enter state 31
	'head'         shift, and enter state 33
	'isempty'      shift, and enter state 35
	'iszero'       shift, and enter state 36
	'pred'         shift, and enter state 39
	'succ'         shift, and enter state 40
	'tail'         shift, and enter state 41
	'true'         shift, and enter state 42
	'unfold'       shift, and enter state 43
	L_Ident        shift, and enter state 17

	Ident          goto state 18
	Expr1          goto state 64
	Expr2          goto state 21
	Expr3          goto state 22

State 8

	%start_pExpr2 -> . Expr2                            (rule 8)

	'('            shift, and enter state 24
	'0'            shift, and enter state 25
	'cons'         shift, and enter state 28
	'false'        shift, and enter state 29
	'fix'          shift, and enter state 30
	'fold'         shift, and enter state 31
	'head'         shift, and enter state 33
	'isempty'      shift, and enter state 35
	'iszero'       shift, and enter state 36
	'pred'         shift, and enter state 39
	'succ'         shift, and enter state 40
	'tail'         shift, and enter state 41
	'true'         shift, and enter state 42
	'unfold'       shift, and enter state 43
	L_Ident        shift, and enter state 17

	Ident          goto state 18
	Expr2          goto state 63
	Expr3          goto state 22

State 9

	%start_pExpr3 -> . Expr3                            (rule 9)

	'('            shift, and enter state 24
	'0'            shift, and enter state 25
	'false'        shift, and enter state 29
	'true'         shift, and enter state 42
	L_Ident        shift, and enter state 17

	Ident          goto state 18
	Expr3          goto state 62

State 10

	%start_pType -> . Type                              (rule 10)

	'('            shift, and enter state 51
	'<'            shift, and enter state 56
	'Bool'         shift, and enter state 52
	'Nat'          shift, and enter state 53
	'['            shift, and enter state 57
	'{'            shift, and enter state 58
	'µ'            shift, and enter state 61
	L_Ident        shift, and enter state 17

	Ident          goto state 49
	Type           goto state 59
	Type1          goto state 60
	Type2          goto state 55

State 11

	%start_pType1 -> . Type1                            (rule 11)

	'('            shift, and enter state 51
	'<'            shift, and enter state 56
	'Bool'         shift, and enter state 52
	'Nat'          shift, and enter state 53
	'['            shift, and enter state 57
	'{'            shift, and enter state 58
	L_Ident        shift, and enter state 17

	Ident          goto state 49
	Type1          goto state 54
	Type2          goto state 55

State 12

	%start_pType2 -> . Type2                            (rule 12)

	'('            shift, and enter state 51
	'Bool'         shift, and enter state 52
	'Nat'          shift, and enter state 53
	L_Ident        shift, and enter state 17

	Ident          goto state 49
	Type2          goto state 50

State 13

	%start_pFieldType -> . FieldType                    (rule 13)

	L_Ident        shift, and enter state 17

	Ident          goto state 45
	FieldType      goto state 48

State 14

	%start_pListFieldType -> . ListFieldType            (rule 14)

	L_Ident        shift, and enter state 17
	%eof           reduce using rule 68

	Ident          goto state 45
	FieldType      goto state 46
	ListFieldType  goto state 47

State 15

	%start_pTyping -> . Typing                          (rule 15)

	'('            shift, and enter state 24
	'0'            shift, and enter state 25
	'<'            shift, and enter state 26
	'['            shift, and enter state 27
	'cons'         shift, and enter state 28
	'false'        shift, and enter state 29
	'fix'          shift, and enter state 30
	'fold'         shift, and enter state 31
	'fun'          shift, and enter state 32
	'head'         shift, and enter state 33
	'if'           shift, and enter state 34
	'isempty'      shift, and enter state 35
	'iszero'       shift, and enter state 36
	'let'          shift, and enter state 37
	'match'        shift, and enter state 38
	'pred'         shift, and enter state 39
	'succ'         shift, and enter state 40
	'tail'         shift, and enter state 41
	'true'         shift, and enter state 42
	'unfold'       shift, and enter state 43
	'{'            shift, and enter state 44
	L_Ident        shift, and enter state 17

	Ident          goto state 18
	Expr           goto state 19
	Expr1          goto state 20
	Expr2          goto state 21
	Expr3          goto state 22
	Typing         goto state 23

State 16

	Ident -> . L_Ident                                  (rule 16)

	L_Ident        shift, and enter state 17


State 17

	Ident -> L_Ident .                                  (rule 16)

	'('            reduce using rule 16
	')'            reduce using rule 16
	','            reduce using rule 16
	'->'           reduce using rule 16
	'.'            reduce using rule 16
	'0'            reduce using rule 16
	':'            reduce using rule 16
	';'            reduce using rule 16
	'='            reduce using rule 16
	'>'            reduce using rule 16
	']'            reduce using rule 16
	'cons'         reduce using rule 16
	'else'         reduce using rule 16
	'false'        reduce using rule 16
	'fix'          reduce using rule 16
	'fold'         reduce using rule 16
	'head'         reduce using rule 16
	'in'           reduce using rule 16
	'isempty'      reduce using rule 16
	'iszero'       reduce using rule 16
	'pred'         reduce using rule 16
	'succ'         reduce using rule 16
	'tail'         reduce using rule 16
	'then'         reduce using rule 16
	'true'         reduce using rule 16
	'unfold'       reduce using rule 16
	'{'            reduce using rule 16
	'}'            reduce using rule 16
	L_Ident        reduce using rule 16
	%eof           reduce using rule 16


State 18

	Expr3 -> Ident .                                    (rule 54)

	'('            reduce using rule 54
	')'            reduce using rule 54
	','            reduce using rule 54
	'.'            reduce using rule 54
	'0'            reduce using rule 54
	':'            reduce using rule 54
	';'            reduce using rule 54
	'>'            reduce using rule 54
	']'            reduce using rule 54
	'cons'         reduce using rule 54
	'else'         reduce using rule 54
	'false'        reduce using rule 54
	'fix'          reduce using rule 54
	'fold'         reduce using rule 54
	'head'         reduce using rule 54
	'in'           reduce using rule 54
	'isempty'      reduce using rule 54
	'iszero'       reduce using rule 54
	'pred'         reduce using rule 54
	'succ'         reduce using rule 54
	'tail'         reduce using rule 54
	'then'         reduce using rule 54
	'true'         reduce using rule 54
	'unfold'       reduce using rule 54
	'{'            reduce using rule 54
	'}'            reduce using rule 54
	L_Ident        reduce using rule 54
	%eof           reduce using rule 54


State 19

	Typing -> Expr . ':' Type                           (rule 71)

	':'            shift, and enter state 111


State 20

	Expr -> Expr1 .                                     (rule 28)
	Expr1 -> Expr1 . Expr2                              (rule 37)

	'('            shift, and enter state 24
	')'            reduce using rule 28
	','            reduce using rule 28
	'0'            shift, and enter state 25
	':'            reduce using rule 28
	';'            reduce using rule 28
	'>'            reduce using rule 28
	']'            reduce using rule 28
	'cons'         shift, and enter state 28
	'else'         reduce using rule 28
	'false'        shift, and enter state 29
	'fix'          shift, and enter state 30
	'fold'         shift, and enter state 31
	'head'         shift, and enter state 33
	'in'           reduce using rule 28
	'isempty'      shift, and enter state 35
	'iszero'       shift, and enter state 36
	'pred'         shift, and enter state 39
	'succ'         shift, and enter state 40
	'tail'         shift, and enter state 41
	'then'         reduce using rule 28
	'true'         shift, and enter state 42
	'unfold'       shift, and enter state 43
	'}'            reduce using rule 28
	L_Ident        shift, and enter state 17
	%eof           reduce using rule 28

	Ident          goto state 18
	Expr2          goto state 83
	Expr3          goto state 22

State 21

	Expr1 -> Expr2 .                                    (rule 38)

	'('            reduce using rule 38
	')'            reduce using rule 38
	','            reduce using rule 38
	'0'            reduce using rule 38
	':'            reduce using rule 38
	';'            reduce using rule 38
	'>'            reduce using rule 38
	']'            reduce using rule 38
	'cons'         reduce using rule 38
	'else'         reduce using rule 38
	'false'        reduce using rule 38
	'fix'          reduce using rule 38
	'fold'         reduce using rule 38
	'head'         reduce using rule 38
	'in'           reduce using rule 38
	'isempty'      reduce using rule 38
	'iszero'       reduce using rule 38
	'pred'         reduce using rule 38
	'succ'         reduce using rule 38
	'tail'         reduce using rule 38
	'then'         reduce using rule 38
	'true'         reduce using rule 38
	'unfold'       reduce using rule 38
	'{'            reduce using rule 38
	'}'            reduce using rule 38
	L_Ident        reduce using rule 38
	%eof           reduce using rule 38


State 22

	Expr2 -> Expr3 .                                    (rule 49)
	Expr3 -> Expr3 . '.' Ident                          (rule 50)

	'('            reduce using rule 49
	')'            reduce using rule 49
	','            reduce using rule 49
	'.'            shift, and enter state 84
	'0'            reduce using rule 49
	':'            reduce using rule 49
	';'            reduce using rule 49
	'>'            reduce using rule 49
	']'            reduce using rule 49
	'cons'         reduce using rule 49
	'else'         reduce using rule 49
	'false'        reduce using rule 49
	'fix'          reduce using rule 49
	'fold'         reduce using rule 49
	'head'         reduce using rule 49
	'in'           reduce using rule 49
	'isempty'      reduce using rule 49
	'iszero'       reduce using rule 49
	'pred'         reduce using rule 49
	'succ'         reduce using rule 49
	'tail'         reduce using rule 49
	'then'         reduce using rule 49
	'true'         reduce using rule 49
	'unfold'       reduce using rule 49
	'{'            reduce using rule 49
	'}'            reduce using rule 49
	L_Ident        reduce using rule 49
	%eof           reduce using rule 49


State 23

	%start_pTyping -> Typing .                          (rule 15)

	%eof           accept


State 24

	Expr3 -> '(' . Expr ')'                             (rule 55)

	'('            shift, and enter state 24
	'0'            shift, and enter state 25
	'<'            shift, and enter state 26
	'['            shift, and enter state 27
	'cons'         shift, and enter state 28
	'false'        shift, and enter state 29
	'fix'          shift, and enter state 30
	'fold'         shift, and enter state 31
	'fun'          shift, and enter state 32
	'head'         shift, and enter state 33
	'if'           shift, and enter state 34
	'isempty'      shift, and enter state 35
	'iszero'       shift, and enter state 36
	'let'          shift, and enter state 37
	'match'        shift, and enter state 38
	'pred'         shift, and enter state 39
	'succ'         shift, and enter state 40
	'tail'         shift, and enter state 41
	'true'         shift, and enter state 42
	'unfold'       shift, and enter state 43
	'{'            shift, and enter state 44
	L_Ident        shift, and enter state 17

	Ident          goto state 18
	Expr           goto state 110
	Expr1          goto state 20
	Expr2          goto state 21
	Expr3          goto state 22

State 25

	Expr3 -> '0' .                                      (rule 53)

	'('            reduce using rule 53
	')'            reduce using rule 53
	','            reduce using rule 53
	'.'            reduce using rule 53
	'0'            reduce using rule 53
	':'            reduce using rule 53
	';'            reduce using rule 53
	'>'            reduce using rule 53
	']'            reduce using rule 53
	'cons'         reduce using rule 53
	'else'         reduce using rule 53
	'false'        reduce using rule 53
	'fix'          reduce using rule 53
	'fold'         reduce using rule 53
	'head'         reduce using rule 53
	'in'           reduce using rule 53
	'isempty'      reduce using rule 53
	'iszero'       reduce using rule 53
	'pred'         reduce using rule 53
	'succ'         reduce using rule 53
	'tail'         reduce using rule 53
	'then'         reduce using rule 53
	'true'         reduce using rule 53
	'unfold'       reduce using rule 53
	'{'            reduce using rule 53
	'}'            reduce using rule 53
	L_Ident        reduce using rule 53
	%eof           reduce using rule 53


State 26

	Expr -> '<' . Ident '=' Expr '>' 'as' '<' ListFieldType '>'    (rule 25)

	L_Ident        shift, and enter state 17

	Ident          goto state 109

State 27

	Expr -> '[' . ListExpr ']' 'as' '[' Type ']'        (rule 27)

	'('            shift, and enter state 24
	'0'            shift, and enter state 25
	'<'            shift, and enter state 26
	'['            shift, and enter state 27
	']'            reduce using rule 18
	'cons'         shift, and enter state 28
	'false'        shift, and enter state 29
	'fix'          shift, and enter state 30
	'fold'         shift, and enter state 31
	'fun'          shift, and enter state 32
	'head'         shift, and enter state 33
	'if'           shift, and enter state 34
	'isempty'      shift, and enter state 35
	'iszero'       shift, and enter state 36
	'let'          shift, and enter state 37
	'match'        shift, and enter state 38
	'pred'         shift, and enter state 39
	'succ'         shift, and enter state 40
	'tail'         shift, and enter state 41
	'true'         shift, and enter state 42
	'unfold'       shift, and enter state 43
	'{'            shift, and enter state 44
	L_Ident        shift, and enter state 17

	Ident          goto state 18
	ListExpr       goto state 108
	Expr           goto state 75
	Expr1          goto state 20
	Expr2          goto state 21
	Expr3          goto state 22

State 28

	Expr2 -> 'cons' . Expr3 Expr3                       (rule 39)

	'('            shift, and enter state 24
	'0'            shift, and enter state 25
	'false'        shift, and enter state 29
	'true'         shift, and enter state 42
	L_Ident        shift, and enter state 17

	Ident          goto state 18
	Expr3          goto state 107

State 29

	Expr3 -> 'false' .                                  (rule 52)

	'('            reduce using rule 52
	')'            reduce using rule 52
	','            reduce using rule 52
	'.'            reduce using rule 52
	'0'            reduce using rule 52
	':'            reduce using rule 52
	';'            reduce using rule 52
	'>'            reduce using rule 52
	']'            reduce using rule 52
	'cons'         reduce using rule 52
	'else'         reduce using rule 52
	'false'        reduce using rule 52
	'fix'          reduce using rule 52
	'fold'         reduce using rule 52
	'head'         reduce using rule 52
	'in'           reduce using rule 52
	'isempty'      reduce using rule 52
	'iszero'       reduce using rule 52
	'pred'         reduce using rule 52
	'succ'         reduce using rule 52
	'tail'         reduce using rule 52
	'then'         reduce using rule 52
	'true'         reduce using rule 52
	'unfold'       reduce using rule 52
	'{'            reduce using rule 52
	'}'            reduce using rule 52
	L_Ident        reduce using rule 52
	%eof           reduce using rule 52


State 30

	Expr2 -> 'fix' . Expr3                              (rule 46)
